--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,9 @@ enable_testing()
 set(SRC      ${PROJECT_SOURCE_DIR}/src)
 set(TESTS    ${PROJECT_SOURCE_DIR}/tests)
 set(EXAMPLES ${PROJECT_SOURCE_DIR}/examples)
+set(DOCS     ${PROJECT_SOURCE_DIR}/docs)
 
 add_subdirectory(${SRC})
 add_subdirectory(${TESTS})
 add_subdirectory(${EXAMPLES})
+add_subdirectory(${DOCS})
